--- a/css/canvas.css
+++ b/css/canvas.css
@@ -2,6 +2,11 @@ body {
 	background: #fff;
 }
 
+.ui-state-hover
+{
+	border: 0px;
+}
+
 .page {
 	height: auto;
 	width: auto;
@@ -14,7 +19,7 @@ body {
 .container-outline {border: 0px dotted #666; min-height: 50px;}
 .row-outline {margin-top: 10px; margin-bottom: 10px; /*border-top: 4px solid #666;*/}
 .row-outline:hover {border: 0px dotted #4a9bff; /* border-top: 4px solid #4a9bff;*/}
-.column-outline {background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAKElEQVQIW2NkQANpaWn/GZHFQAKzZs1ihAvCBECKwILIAmBBdAGQIABhihI3cAJZSwAAAABJRU5ErkJggg==) repeat; }
+.column-outline {min-height: 30px; background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAKElEQVQIW2NkQANpaWn/GZHFQAKzZs1ihAvCBECKwILIAmBBdAGQIABhihI3cAJZSwAAAABJRU5ErkJggg==) repeat; }
 .column-outline:hover {background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAALElEQVQIW2NkwAK8Zv//z4guDhLclsrIiCIBEwQphksgC8Il0AXBEtgEQRIAZYYW6jbeKcYAAAAASUVORK5CYII=) repeat; }
 
 .container-handle {
