--- a/css/canvas.css
+++ b/css/canvas.css
@@ -5,12 +5,10 @@ body {
 .ui-state-hover
 {
 	border: 0px;
+	background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAHCAYAAADEUlfTAAAAHElEQVQIW2Nc9v/KfwYcgBEkGcWow4hNftBJAgD26BuARzNJ4QAAAABJRU5ErkJggg==) repeat; 
 }
 
 #page {
-	min-height: 500px;
-	min-width: 1200px;
-	background: #ccc;
 }
 
 #sidebar_scaffolds, #sidebar_blocks {
@@ -20,12 +18,9 @@ body {
 .container-outline {border: 0px dotted #666; min-height: 50px;}
 .row-outline {margin-top: 10px; margin-bottom: 10px; /*border-top: 4px solid #666;*/}
 .row-outline:hover {border: 0px dotted #4a9bff; /* border-top: 4px solid #4a9bff;*/}
-.column-outline {min-height: 50px; background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAKElEQVQIW2NkQANpaWn/GZHFQAKzZs1ihAvCBECKwILIAmBBdAGQIABhihI3cAJZSwAAAABJRU5ErkJggg==) repeat; }
-.column-outline:hover {background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAALElEQVQIW2NkwAK8Zv//z4guDhLclsrIiCIBEwQphksgC8Il0AXBEtgEQRIAZYYW6jbeKcYAAAAASUVORK5CYII=) repeat; }
-
-.blocks {
-	border: 1px dotted #666;
-}
+.column-outline {min-height: 50px; background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAHCAYAAADEUlfTAAAAG0lEQVQIW2OMq7zlw4ADMIIkF7WrbcEmP+gkAarWGgXyq5CNAAAAAElFTkSuQmCC) repeat; }
+.column-outline:hover {background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAAHCAYAAADEUlfTAAAAHElEQVQIW2O8cuXKfwYcgBEkqaOjw4hNftBJAgD5uRuDlBr//AAAAABJRU5ErkJggg==) repeat; }
+.blocks-outline {min-height: 50px;}
 
 .container-handle {
 	position: relative;
